force-app/main/default/objects/SFDC_Expense__c/fields/TOTAL_MEALS_t__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_MEALS_t__c</fullName>
    <formula>Breakfast_t__c   +  Lunch_t__c  +  Dinner_t__c  +  Other_Food_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL MEALS (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>