force-app/main/default/objects/SFDC_Expense__c/fields/TOTAL_MEALS_w__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_MEALS_w__c</fullName>
    <formula>Breakfast_w__c   +  Lunch_w__c  +  Dinner_w__c  +  Other_Food_w__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL MEALS (w)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>