force-app/main/default/objects/SFDC_Expense__c/listViews/AllExpenses.listView-meta.xml
<ListView>
    <fullName>AllExpenses</fullName>
    <columns>Week_of__c</columns>
    <columns>Projects__c</columns>
    <columns>Resource__c</columns>
    <columns>REPORT_TOTAL__c</columns>
    <columns>Submit__c</columns>
    <columns>Approve__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Expenses</label>
</ListView>